Update Lecture 11 and Lecture 12

--- a/nr592/index.html
+++ b/nr592/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title></title>
+<title>index.utf8</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -56,9 +56,7 @@ h6 {
 </style>
 
 
-</head>
 
-<body>
 
 <style type = "text/css">
 .main-container {
@@ -176,8 +174,6 @@ $(document).ready(function () {
   menuAnchor.closest('li.dropdown').addClass('active');
 });
 </script>
-
-<div class="container-fluid main-container">
 
 <!-- tabsets -->
 
@@ -336,6 +332,16 @@ div.tocify {
 
 </style>
 
+
+
+</head>
+
+<body>
+
+
+<div class="container-fluid main-container">
+
+
 <!-- setup 3col/9col grid for toc_float and main content  -->
 <div class="row-fluid">
 <div class="col-xs-12 col-sm-4 col-md-3">
@@ -378,15 +384,15 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore"><div style="white-space: pre-line;">Introduction to Applied Statistical Computing with R
- 
+<h1 class="title toc-ignore"><div class="line-block">Introduction to Applied Statistical Computing with R<br />
+ <br />
 SYLLABUS</div></h1>
-<h4 class="author"><em><div style="white-space: pre-line;"> 
-Richard E.W. Berl</div></em></h4>
-<h4 class="date"><em><div style="white-space: pre-line;">Spring 2019
- 
-Last Updated: 2019-04-16
- </div></em></h4>
+<h4 class="author"><div class="line-block"> <br />
+Richard E.W. Berl</div></h4>
+<h4 class="date"><div class="line-block">Spring 2019<br />
+ <br />
+Last Updated: 2019-04-16<br />
+ </div></h4>
 
 </div>
 
@@ -399,10 +405,10 @@ NR 592, Section 1: Seminar in Natural Resources (1 credit)</p>
 Richard E.W. Berl, Human Dimensions of Natural Resources<br />
 <em>(He/Him/His)</em><br />
 Forestry 201<br />
-<a href="mailto:rewberl@colostate.edu">rewberl@colostate.edu</a><br />
+<a href="mailto:rewberl@colostate.edu" class="email">rewberl@colostate.edu</a><br />
 <a href="https://rewberl.github.io">rewberl.github.io</a></p>
 <p><strong>Website</strong><br />
-<a href="https://rewberl.github.io/nr592/" class="uri">https://rewberl.github.io/nr592/</a></p>
+<a href="https://rewberl.github.io/nr592/">https://rewberl.github.io/nr592/</a></p>
 <p><strong>Meeting Times</strong><br />
 Tuesdays and Thursdays, 10:00am - 10:50am, Animal Science 31<br />
 Office hours by appointment</p>
@@ -438,7 +444,7 @@ There are no required texts for you to purchase. We will utilize a variety of fr
 <li><p>RStudio. RStudio cheat sheets. Available: <a href="https://www.rstudio.com/resources/cheatsheets/" class="uri">https://www.rstudio.com/resources/cheatsheets/</a></p></li>
 <li><p>Short, T. R reference card. Available: <a href="https://cran.r-project.org/doc/contrib/Short-refcard.pdf" class="uri">https://cran.r-project.org/doc/contrib/Short-refcard.pdf</a></p></li>
 <li><p>Torfs, P., &amp; Brauer, C. A (very) short introduction to R. Available: <a href="https://cran.r-project.org/doc/contrib/Torfs+Brauer-Short-R-Intro.pdf" class="uri">https://cran.r-project.org/doc/contrib/Torfs+Brauer-Short-R-Intro.pdf</a></p></li>
-<li><p>Venables, W. N., et al. An introduction to R. Available: <a href="https://cran.r-project.org/doc/manuals/R-intro.html" class="uri">https://cran.r-project.org/doc/manuals/R-intro.html</a></p></li>
+<li><p>Venables, W. N., et al. An introduction to R. Available: <a href="https://cran.r-project.org/doc/manuals/R-intro.html" class="uri">https://cran.r-project.org/doc/manuals/R-intro.html</a></p></li>
 </ul>
 <p><em>Online Textbooks</em></p>
 <ul>
@@ -468,7 +474,7 @@ There are no required texts for you to purchase. We will utilize a variety of fr
 </ul>
 <p><em>Tools</em></p>
 <ul>
-<li>Kross, S., et al. swirl: Learn R, in R. Available: <a href="https://swirlstats.com/students.html" class="uri">https://swirlstats.com/students.html</a></li>
+<li>Kross, S., et al. swirl: Learn R, in R. Available: <a href="https://swirlstats.com/students.html" class="uri">https://swirlstats.com/students.html</a></li>
 </ul>
 <p><br></p>
 </div>
@@ -485,7 +491,7 @@ There are no required texts for you to purchase. We will utilize a variety of fr
 <h2>Course Policies</h2>
 <p><strong>Assignments and Grading</strong><br />
 Final grades for the course will be made up of contributions from the following assignments:</p>
-<table class="table table-bordered table-striped table-responsive" style>
+<table class="table table-bordered table-striped table-responsive" style="">
 <thead>
 <tr>
 <th style="text-align:left;">
@@ -674,7 +680,7 @@ This course will adhere to the CSU Academic Integrity Policy as found on the Stu
 <p><em>Adapted from the <a href="https://tilt.colostate.edu/integrity/resourcesFaculty/howShouldI.cfm">Academic Integrity Program</a> at <a href="https://tilt.colostate.edu/">The Institute for Learning and Teaching</a>.</em></p>
 <p><strong>Disability Access</strong><br />
 If you are a student who will need accommodations in this class due to a disability or chronic health condition, I will need an accommodation letter from the Student Disability Center (SDC) before they are implemented. Please contact me as soon as possible to arrange office hours to give me the letter and/or to further discuss your needs.</p>
-<p>If you do not already have these letters, please contact the SDC as soon as possible to initiate the accommodation process. The SDC is located in room 121 of the TILT building. Contact them at 970-491-6385 or visit <a href="www.disabilitycenter.colostate.edu" class="uri">www.disabilitycenter.colostate.edu</a>.</p>
+<p>If you do not already have these letters, please contact the SDC as soon as possible to initiate the accommodation process. The SDC is located in room 121 of the TILT building. Contact them at 970-491-6385 or visit <a href="www.disabilitycenter.colostate.edu">www.disabilitycenter.colostate.edu</a>.</p>
 <p><em>Adapted from the <a href="https://disabilitycenter.colostate.edu/info-for-faculty/#1519163201592-08353203-518c">Faculty/GTA Information</a> at the <a href="https://disabilitycenter.colostate.edu/">Student Disability Center</a>.</em></p>
 <p><strong>Title IX Information</strong><br />
 CSU’s Discrimination, Harassment, Sexual Harassment, Sexual Misconduct, Domestic Violence, Dating Violence, Stalking, and Retaliation policy designates faculty and employees of the University as “Responsible Employees.” This designation is consistent with federal law and guidance, and requires faculty to report information regarding students who may have experienced any form of sexual harassment, sexual misconduct, relationship violence, stalking or retaliation. This includes information shared with faculty in person, electronic communications or in class assignments. As “Responsible Employees,” faculty may refer students to campus resources (see below), together with informing the Office of Support and Safety Assessment to help ensure student safety and welfare. Information regarding sexual harassment, sexual misconduct, relationship violence, stalking and retaliation is treated with the greatest degree of confidentiality possible while also ensuring student and campus safety.</p>
